--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@redux-devtools/extension": "^3.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,12 +12,14 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
-    "react-redux": "^8.1.2",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
+    "redux-middleware": "^0.1.21",
     "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
