--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redux-logger": "^3.0.6",
     "redux-middleware": "^0.1.21",
     "redux-thunk": "^2.4.2",
+    "turkey-neighbourhoods": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
